--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Bootstrap demo</title>
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- link icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -44,14 +46,55 @@
         </div>
     </div>
     <div class="container">
-        <div class="row justify-content-center d">
-          <div class="col-4">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero impedit optio expedita error, inventore sapiente. Animi nulla deleniti quo aspernatur sint dolorem in necessitatibus sequi magnam, odit debitis, optio corrupti.</p>
+        <div class="row justify-content-center text-center">
+          <div class="col-6 position-relative">
+            <p class="fst-italic" id="quotes"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero impedit optio expedita error, inventore sapiente. Animi nulla deleniti quo aspernatur sint dolorem in necessitatibus sequi magnam, odit debitis, optio corrupti.</p>
           </div>
         </div>
     </div>
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-3">
+          <i class="bi bi-snow item"></i>
+          <p > orem ipsum dolor sit</p>
+          <div class="bordo mb-4">
+            <i class="bi bi-circle"></i>
+        </div>
+        </div>
+        <div class="col-3">
+          <i class="bi bi-triangle-half item"></i>
+          <p> Lorem ipsum dolor sit</p>
+          <div class="bordo mb-4">
+            <i class="bi bi-circle"></i>
+        </div>
+        </div>
+        <div class="col-3">
+          <i class="bi bi-map-fill item"></i>
+          <p>Lorem ipsum dolor sit</p>
+          <div class="bordo mb-4">
+            <i class="bi bi-circle"></i>
+        </div>
+        </div>
+        <div class="col-3">
+          <i class="bi bi-triangle-half item"></i>
+            <p>Lorem ipsum dolor sit</p>
+            <div class="bordo mb-4">
+              <i class="bi bi-circle"></i>
+          </div>  
+        </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+
+        </div>
+        <div class="col-4">
+          
+        </div>
+      </div>
+    </div>
    
     <!-- javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"  iconintegrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
