--- a/index.html
+++ b/index.html
@@ -53,29 +53,29 @@
         </div>
     </div>
     <div class="container-fluid">
-      <div class="row text-center">
-        <div class="col-3">
+      <div class="row text-center justify-content-center">
+        <div class="col-2">
           <i class="bi bi-snow item"></i>
-          <p > orem ipsum dolor sit</p>
+          <p > Lorem ipsum dolor sit</p>
           <div class="bordo mb-4">
             <i class="bi bi-circle"></i>
+          </div>
         </div>
-        </div>
-        <div class="col-3">
+        <div class="col-2">
           <i class="bi bi-triangle-half item"></i>
           <p> Lorem ipsum dolor sit</p>
           <div class="bordo mb-4">
             <i class="bi bi-circle"></i>
         </div>
         </div>
-        <div class="col-3">
+        <div class="col-2">
           <i class="bi bi-map-fill item"></i>
           <p>Lorem ipsum dolor sit</p>
           <div class="bordo mb-4">
             <i class="bi bi-circle"></i>
         </div>
         </div>
-        <div class="col-3">
+        <div class="col-2">
           <i class="bi bi-triangle-half item"></i>
             <p>Lorem ipsum dolor sit</p>
             <div class="bordo mb-4">
@@ -83,13 +83,15 @@
           </div>  
         </div>
     </div>
-    <div class="container">
-      <div class="row">
+    <div class="container-fluid">
+      <div class="row justify-content-between">
         <div class="col-4">
-
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, autem! Illum recusandae reprehenderit, ipsam nesciunt nemo molestias, et hic iste facilis fuga cum ullam aut veritatis error consectetur a neque.</p>
         </div>
-        <div class="col-4">
-          
+        <div class="col-4 text-end">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, autem! Illum recusandae reprehenderit, ipsam nesciunt nemo molestias, et hic iste facilis fuga cum ullam aut veritatis error consectetur a neque.</p>
         </div>
       </div>
     </div>
