--- a/index.html
+++ b/index.html
@@ -1,102 +1,124 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <!-- bootstrap link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- link icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    <!-- link css -->
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <header class="d-flex justify-content-center header">
-        <img src="./media/logo.png" alt="logo">
-    </header>
-    <nav class="justify-content-center navbar">
-        <ul class="nav justify-content-center  text-decoration-none">
-            <li class="nav-item mx-4 ">
-              <a class="nav-link active " aria-current="page" href="#">Primo link</a>
-            </li>
-            <li class="nav-item mx-4 ">
-              <a class="nav-link" href="#">Altro link</a>
-            </li>
-            <li class="nav-item mx-4 ">
-              <a class="nav-link" href="#">Terzo link</a>
-            </li>
-            <li class="nav-item mx-4 ">
-              <a class="nav-link">Ultimo link</a>
-            </li>
-          </ul>
-    </nav>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class=" col-12 p-0 ">
-                <div class="img-bg d-flex align-items-center justify-content-center ">
-                    <h1>L O R E M</h1>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-6 position-relative">
-            <p class="fst-italic" id="quotes"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero impedit optio expedita error, inventore sapiente. Animi nulla deleniti quo aspernatur sint dolorem in necessitatibus sequi magnam, odit debitis, optio corrupti.</p>
-          </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row text-center justify-content-center">
-        <div class="col-2">
-          <i class="bi bi-snow item"></i>
-          <p > Lorem ipsum dolor sit</p>
-          <div class="bordo mb-4">
-            <i class="bi bi-circle"></i>
-          </div>
-        </div>
-        <div class="col-2">
-          <i class="bi bi-triangle-half item"></i>
-          <p> Lorem ipsum dolor sit</p>
-          <div class="bordo mb-4">
-            <i class="bi bi-circle"></i>
-        </div>
-        </div>
-        <div class="col-2">
-          <i class="bi bi-map-fill item"></i>
-          <p>Lorem ipsum dolor sit</p>
-          <div class="bordo mb-4">
-            <i class="bi bi-circle"></i>
-        </div>
-        </div>
-        <div class="col-2">
-          <i class="bi bi-triangle-half item"></i>
-            <p>Lorem ipsum dolor sit</p>
-            <div class="bordo mb-4">
-              <i class="bi bi-circle"></i>
-          </div>  
-        </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row justify-content-between">
-        <div class="col-4">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, autem! Illum recusandae reprehenderit, ipsam nesciunt nemo molestias, et hic iste facilis fuga cum ullam aut veritatis error consectetur a neque.</p>
-        </div>
-        <div class="col-4 text-end">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, autem! Illum recusandae reprehenderit, ipsam nesciunt nemo molestias, et hic iste facilis fuga cum ullam aut veritatis error consectetur a neque.</p>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <!-- bootstrap link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <!-- link icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Share+Tech+Mono&display=swap"
+    rel="stylesheet">
+  <!-- link css -->
+  <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+  <header class="d-flex justify-content-center header">
+    <img src="./media/logo.png" alt="logo">
+  </header>
+  <!-- navbar -->
+  <nav class="justify-content-center navbar">
+    <ul class="nav justify-content-center  text-decoration-none">
+      <li class="nav-item mx-4 ">
+        <a class="nav-link active " aria-current="page" href="#">Primo link</a>
+      </li>
+      <li class="nav-item mx-4 ">
+        <a class="nav-link" href="#">Altro link</a>
+      </li>
+      <li class="nav-item mx-4 ">
+        <a class="nav-link" href="#">Terzo link</a>
+      </li>
+      <li class="nav-item mx-4 ">
+        <a class="nav-link">Ultimo link</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- text img -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class=" col-12 p-0 ">
+        <div class="img-bg d-flex align-items-center justify-content-center ">
+          <h1>LOREM</h1>
         </div>
       </div>
     </div>
-   
-    <!-- javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"  iconintegrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  </body>
+  </div>
+  <!-- text under img -->
+  <div class="container">
+    <div class="row justify-content-center text-center">
+      <div class="col-11 col-md-6 position-relative mt-4">
+        <p class="fst-italic" id="quotes"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero impedit
+          optio expedita error, inventore sapiente. Animi nulla deleniti quo aspernatur sint dolorem in necessitatibus
+          sequi magnam, odit debitis, optio corrupti.</p>
+      </div>
+    </div>
+  </div>
+  <!-- icons -->
+  <div class="container-fluid mt-3">
+    <div class="row text-center justify-content-center">
+      <div class="col-6 col-md-2">
+        <i class="bi bi-snow item"></i>
+        <p> Lorem ipsum dolor sit</p>
+        <div class="bordo mb-4">
+          <i class="bi bi-circle"></i>
+        </div>
+      </div>
+      <div class="col-6 col-md-2">
+        <i class="bi bi-triangle-half item"></i>
+        <p> Lorem ipsum dolor sit</p>
+        <div class="bordo mb-4">
+          <i class="bi bi-circle"></i>
+        </div>
+      </div>
+      <div class="col-6 col-md-2">
+        <i class="bi bi-map-fill item"></i>
+        <p>Lorem ipsum dolor sit</p>
+        <div class="bordo mb-4">
+          <i class="bi bi-circle"></i>
+        </div>
+      </div>
+      <div class="col-6 col-md-2">
+        <i class="bi bi-triangle-half item"></i>
+        <p>Lorem ipsum dolor sit</p>
+        <div class="bordo mb-4">
+          <i class="bi bi-circle"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- paragraph under icons -->
+  <div class="container-fluid">
+    <div class="row justify-content-between mt-5">
+      <div class="col-12 col-md-4 mt-5">
+        <h3>Lorem ipsum dolor sit.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, autem! Illum recusandae reprehenderit, ipsam
+          nesciunt nemo molestias, et hic iste facilis fuga cum ullam aut veritatis error consectetur a neque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, cumque tenetur maiores iusto corrupti,
+          similique aliquam provident delectus culpa alias dicta sint ducimus placeat reprehenderit sunt quod fugiat
+          est odit.</p>
+      </div>
+      <div class="col-12 col-md-4 text-end mt-5">
+        <h3>Lorem ipsum dolor sit.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, autem! Illum recusandae reprehenderit, ipsam
+          nesciunt nemo molestias, et hic iste facilis fuga cum ullam aut veritatis error consectetur a neque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex aspernatur totam sapiente maxime blanditiis
+          ratione est libero architecto. Maxime, animi esse! Quisquam labore odit quaerat aperiam provident nisi
+          distinctio rerum.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- javascript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    iconintegrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
