--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
     </div>
   </div>
   <!-- paragraph under icons -->
-  <div class="container-fluid">
+  <div class="container">
     <div class="row justify-content-between mt-5">
-      <div class="col-12 col-md-4 mt-5">
+      <div class="col-12 col-md-5 mt-5">
         <h3>Lorem ipsum dolor sit.</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, autem! Illum recusandae reprehenderit, ipsam
           nesciunt nemo molestias, et hic iste facilis fuga cum ullam aut veritatis error consectetur a neque.</p>
@@ -104,7 +104,7 @@
           similique aliquam provident delectus culpa alias dicta sint ducimus placeat reprehenderit sunt quod fugiat
           est odit.</p>
       </div>
-      <div class="col-12 col-md-4 text-end mt-5">
+      <div class="col-12 col-md-5 text-end mt-5">
         <h3>Lorem ipsum dolor sit.</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, autem! Illum recusandae reprehenderit, ipsam
           nesciunt nemo molestias, et hic iste facilis fuga cum ullam aut veritatis error consectetur a neque.</p>
@@ -114,7 +114,14 @@
       </div>
     </div>
   </div>
-
+  <!-- section button with background -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="img-bg-2 d-flex align-items-center justify-content-center ">
+        <button class="btn-lorem">Lorem, ipsum.</button>
+      </div>
+    </div>
+  </div>
   <!-- javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     iconintegrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
