--- a/index.html
+++ b/index.html
@@ -122,6 +122,56 @@
       </div>
     </div>
   </div>
+  <!-- SectionTimeline -->
+  <div class="container-fluid pt-5 bg-timeline">
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <h2 class="ms-5">Lorem ipsum dolor sit.</h2>
+        <ul class=" timeline ms-5">
+          <li class=" timeline-item mb-5">
+            <h6 class=" mb-2 fw-bold">Lorem, ipsum.</h6>
+            <p class="">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla explicabo rerum incidunt natus
+              eveniet
+              corrupti ad quibusdam veritatis fugiat adipisci sit, sequi delectus atque eligendi autem tempore dolorum
+              expedita.
+            </p>
+          </li>
+
+          <li class="timeline-item mb-5">
+            <h6 class=" mb-2 fw-bold">Lorem, ipsum.</h6>
+            <p class="">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla explicabo rerum incidunt natus
+              eveniet
+              corrupti ad quibusdam veritatis fugiat adipisci sit, sequi delectus atque eligendi autem tempore dolorum
+              expedita.
+            </p>
+          </li>
+
+          <li class="timeline-item mb-5">
+            <h6 class=" mb-2 fw-bold">Lorem, ipsum.</h6>
+            <p class="">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla explicabo rerum incidunt natus
+              eveniet
+              corrupti ad quibusdam veritatis fugiat adipisci sit, sequi delectus atque eligendi autem tempore dolorum
+              expedita.
+            </p>
+          </li>
+
+          <li class="timeline-item mb-5">
+            <h6 class=" mb-2 fw-bold">Lorem, ipsum.</h6>
+            <p class="">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nulla explicabo rerum incidunt natus
+              eveniet
+              corrupti ad quibusdam veritatis fugiat adipisci sit, sequi delectus atque eligendi autem tempore dolorum
+              expedita.
+            </p>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-6 bg-timeline-2"></div>
+    </div>
+  </div>
   <!-- javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     iconintegrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
