--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
     <div class="row text-center justify-content-center">
       <div class="col-6 col-md-2">
         <i class="bi bi-snow item"></i>
-        <p> Lorem ipsum dolor sit</p>
+        <p class="size-text"> Lorem ipsum dolor sit</p>
         <div class="bordo mb-4">
           <i class="bi bi-circle"></i>
         </div>
       </div>
       <div class="col-6 col-md-2">
         <i class="bi bi-triangle-half item"></i>
-        <p> Lorem ipsum dolor sit</p>
+        <p class="size-text"> Lorem ipsum dolor sit</p>
         <div class="bordo mb-4">
           <i class="bi bi-circle"></i>
         </div>
       </div>
       <div class="col-6 col-md-2">
         <i class="bi bi-map-fill item"></i>
-        <p>Lorem ipsum dolor sit</p>
+        <p class="size-text">Lorem ipsum dolor sit</p>
         <div class="bordo mb-4">
           <i class="bi bi-circle"></i>
         </div>
       </div>
       <div class="col-6 col-md-2">
         <i class="bi bi-triangle-half item"></i>
-        <p>Lorem ipsum dolor sit</p>
+        <p class="size-text">Lorem ipsum dolor sit</p>
         <div class="bordo mb-4">
           <i class="bi bi-circle"></i>
         </div>
@@ -172,6 +172,67 @@
       <div class="col-md-6 bg-timeline-2"></div>
     </div>
   </div>
+  <!-- section team -->
+  <div class="container my-5">
+    <div class="row">
+      <h2 class="mt-5 ps-4">OUR TEAM</h2>
+    </div>
+    <div class="row">
+      <div class="col-6 col-md-3 mt-5">
+        <div class="d-flex justify-content-center">
+          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-user " alt="...">
+        </div>
+        <div class="text-center">
+          <h5>Lorem, ipsum.</h5>
+          <p class="size-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia veniam necessitatibus
+            eveniet libero corporis.</p>
+          <i class="bi bi-instagram mx-3 icons-circle-card"></i>
+          <i class="bi bi-linkedin mx-3 icons-circle-card"></i>
+          <i class="bi bi-facebook mx-3 icons-circle-card"></i>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 mt-5">
+        <div class="d-flex justify-content-center">
+          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-user " alt="...">
+        </div>
+        <div class="text-center">
+          <h5>Lorem, ipsum.</h5>
+          <p class="size-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia veniam necessitatibus
+            eveniet libero corporis.</p>
+          <i class="bi bi-instagram mx-3 icons-circle-card"></i>
+          <i class="bi bi-linkedin mx-3 icons-circle-card"></i>
+          <i class="bi bi-facebook mx-3 icons-circle-card"></i>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 mt-5">
+        <div class="d-flex justify-content-center">
+          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-user " alt="...">
+        </div>
+        <div class="text-center">
+          <h5>Lorem, ipsum.</h5>
+          <p class="size-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia veniam necessitatibus
+            eveniet libero corporis.</p>
+          <i class="bi bi-instagram mx-3 icons-circle-card"></i>
+          <i class="bi bi-linkedin mx-3 icons-circle-card"></i>
+          <i class="bi bi-facebook mx-3 icons-circle-card"></i>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 mt-5">
+        <div class="d-flex justify-content-center">
+          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-user " alt="...">
+        </div>
+        <div class="text-center">
+          <h5>Lorem, ipsum.</h5>
+          <p class="size-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia veniam necessitatibus
+            eveniet libero corporis.</p>
+          <i class="bi bi-instagram mx-3 icons-circle-card"></i>
+          <i class="bi bi-linkedin mx-3 icons-circle-card"></i>
+          <i class="bi bi-facebook mx-3 icons-circle-card"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     iconintegrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
