--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
     <div class="row">
       <div class="col-6 col-md-3 mt-5">
         <div class="d-flex justify-content-center">
-          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-user " alt="...">
+          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-team " alt="...">
         </div>
         <div class="text-center">
-          <h5>Lorem, ipsum.</h5>
+          <h6>Lorem, ipsum.</h6>
           <p class="size-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia veniam necessitatibus
             eveniet libero corporis.</p>
           <i class="bi bi-instagram mx-3 icons-circle-card"></i>
@@ -193,10 +193,10 @@
       </div>
       <div class="col-6 col-md-3 mt-5">
         <div class="d-flex justify-content-center">
-          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-user " alt="...">
+          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-team " alt="...">
         </div>
         <div class="text-center">
-          <h5>Lorem, ipsum.</h5>
+          <h6>Lorem, ipsum.</h6>
           <p class="size-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia veniam necessitatibus
             eveniet libero corporis.</p>
           <i class="bi bi-instagram mx-3 icons-circle-card"></i>
@@ -206,10 +206,10 @@
       </div>
       <div class="col-6 col-md-3 mt-5">
         <div class="d-flex justify-content-center">
-          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-user " alt="...">
+          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-team " alt="...">
         </div>
         <div class="text-center">
-          <h5>Lorem, ipsum.</h5>
+          <h6>Lorem, ipsum.</h6>
           <p class="size-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia veniam necessitatibus
             eveniet libero corporis.</p>
           <i class="bi bi-instagram mx-3 icons-circle-card"></i>
@@ -219,10 +219,10 @@
       </div>
       <div class="col-6 col-md-3 mt-5">
         <div class="d-flex justify-content-center">
-          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-user " alt="...">
+          <img src="./media/mountain-547363_1920.jpg" class="img-thumbnail img-team " alt="...">
         </div>
         <div class="text-center">
-          <h5>Lorem, ipsum.</h5>
+          <h6>Lorem, ipsum.</h6>
           <p class="size-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia veniam necessitatibus
             eveniet libero corporis.</p>
           <i class="bi bi-instagram mx-3 icons-circle-card"></i>
@@ -232,7 +232,36 @@
       </div>
     </div>
   </div>
-
+  <!-- section benefit  -->
+  <div class="container my-5">
+    <div class="row">
+      <h2 class="mt-5 ps-4">OUR BENEFIT</h2>
+    </div>
+    <div class="row mt-5">
+      <div class="col-12 col-md-6 mt-5 d-flex  align-items-center">
+        <div class="">
+          <h5>Lorem, ipsum dolor.</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, quo sunt, fugiat placeat rem cum magnam
+            nemo omnis ab suscipit incidunt accusamus natus illo iure fuga ullam obcaecati beatae esse?</p>
+        </div>
+      </div>
+      <div class="col-md-6 d-flex justify-content-center">
+        <img src="./media/fog.jpg" class="img-thumbnail img-benefit d-none d-md-block" alt="...">
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-6 d-flex justify-content-center">
+        <img src="./media/landscape-975091_1920.jpg" class="img-thumbnail img-benefit d-none d-md-block" alt="...">
+      </div>
+      <div class="col-12 col-md-6 mt-5 d-flex text-end align-items-center">
+        <div class="">
+          <h5>Lorem, ipsum dolor.</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, quo sunt, fugiat placeat rem cum magnam
+            nemo omnis ab suscipit incidunt accusamus natus illo iure fuga ullam obcaecati beatae esse?</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     iconintegrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
