--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@
       </div>
     </div>
   </div>
+  <!-- section background with red trees -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="img-bg-3 d-flex align-items-center justify-content-center ">
+      </div>
+    </div>
+  </div>
   <!-- javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     iconintegrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
