--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Progetto Red</title>
   <!-- bootstrap link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -126,7 +126,7 @@
   <div class="container-fluid pt-5 bg-timeline">
     <div class="row">
       <div class="col-12 col-md-6">
-        <h2 class="ms-5">Lorem ipsum dolor sit.</h2>
+        <h2 class="ms-5 mb-5">OUR TIMELINE</h2>
         <ul class=" timeline ms-5">
           <li class=" timeline-item mb-5">
             <h6 class=" mb-2 fw-bold">Lorem, ipsum.</h6>
@@ -269,26 +269,29 @@
       </div>
     </div>
   </div>
-<!-- footer -->
-<footer class="container-fluid d-flex align-items-center footer py-5">
-  <div class="row">
-    <h2 id="title">LOREM</h2>
+  <!-- footer -->
+  <footer class="container-fluid d-flex align-items-center footer py-5">
+    <div class="row">
+      <h2 id="title">LOREM</h2>
       <div class="col-12 col-md-9">
         <h5 id="title">Testo generico</h5>
-         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus mollitia, qui vitae saepe tempore porro voluptate quia sapiente laboriosam, labore optio ducimus esse quis aliquam sed, totam id quod officiis! </p>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti praesentium assumenda quidem rerum beatae velit eos, quis earum libero a quisquam, provident perferendis explicabo illo sint maiores minus adipisci accusantium.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus mollitia, qui vitae saepe tempore porro
+          voluptate quia sapiente laboriosam, labore optio ducimus esse quis aliquam sed, totam id quod officiis! </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti praesentium assumenda quidem rerum beatae
+          velit eos, quis earum libero a quisquam, provident perferendis explicabo illo sint maiores minus adipisci
+          accusantium.</p>
       </div>
       <div class="col-12 col-md-3">
         <h5 id="title">Quick link</h5>
-          <ul>
-            <li><a href="">lorem link</a></li>
-            <li><a href="">lorem link</a></li>
-            <li><a href="">lorem link</a></li>
-            <li><a href="">lorem link</a></li>
-          </ul>
-       </div>
-  </div>
-</footer>
+        <ul>
+          <li><a href="">lorem link</a></li>
+          <li><a href="">lorem link</a></li>
+          <li><a href="">lorem link</a></li>
+          <li><a href="">lorem link</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
   <!-- javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     iconintegrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
